fix spacing in book-wrap.html

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,8 +10,10 @@
   0 22.3px 17.9px rgba(0, 0, 0, 0.072),
 
 ;
-margin: 10px
+margin-top: 0px
 }
+
+.card  {margin-top: 0px;}
 $spacing-unit: 30px;
 .subtitle { margin-top: -.85rem!important;}
 
